[project]
name = "ProbDex"
version = "0.1.0"
description = "개념적 원형(Conceptual Prototype) 분석 기반의 AI 수능 기출 문제 검색 시스템, 
AI-powered CSAT Math Problem Search System based on Conceptual Prototype Analysis"
authors = [
    {name = "Han YoungWoong",email = "amzoy1234@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "numpy (>=2,<2.3.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pymupdf (>=1.26.6,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "google-genai (>=1.50.0,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)"
]

[tool.poetry]
packages = [{include = "my_first_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
